Magic numbers--, pad icons to respect uniformItemSizes, choose appropriate size to reduce need for padding and ensure SVGs are scaled to a matching size, add delegate so that more space is allocated for text, increase grid (thus, text) size and initial dialog size.

BUG:172746

svn path=/trunk/KDE/kdelibs/; revision=895536